Unify total/note attribute

--- a/resources/views/ratings/index.twig
+++ b/resources/views/ratings/index.twig
@@ -30,7 +30,7 @@
 			<td>{{ progress(rating.tone, integer_scale) }}</td>
 			<td>{{ progress(rating.audio, integer_scale) }}</td>
 			<td>{{ progress(rating.tab, integer_scale) }}</td>
-			<td>{{ progress(rating.note, rating_scale, true) }}</td>
+			<td>{{ progress(rating.total, rating_scale, true) }}</td>
 			<td class="text-center"><a href="{{ URL.route('ratings.edit', rating.id) }}"><i class="glyphicon glyphicon-edit"></i></a></td>
 			<td class="text-center">{{ favorite(current_user, rating.track) }}</td>
 			<td class="text-center"><a ng-click="remove($event)" href="{{ URL.route('ratings.destroy', rating.id) }}"><i class="glyphicon glyphicon-remove"></i></a></td>
