Exclude rated tracks from recommendations

--- a/resources/views/tracks/index.twig
+++ b/resources/views/tracks/index.twig
@@ -1,6 +1,6 @@
 {% extends '_layouts/table.twig' %}
 {% from '_macros/table.twig' import progress, boolean, favorite %}
-{% set title = 'Tracks' %}
+{% set title = title|default('Tracks') %}
 
 {% block headers %}
 	<th>Artist</th>
