--- a/resources/views/tracks/index.twig
+++ b/resources/views/tracks/index.twig
@@ -55,7 +55,7 @@
 			<td class="text-center">{{ boolean(track.ratings.average('playable')) }}</td>
 			<td class="text-center">{{ boolean(track.ratings.average('sync')) }}</td>
 			<td class="text-center">{{ boolean(track.ratings.average('techniques')) }}</td>
-			<td>{{ track.version }}</td>
+			<td>{{ track.version.name }}</td>
 			<td>
 				{{ progress(track.ratings.average('tone'), integer_scale) }}
 			</td>
