--- a/resources/views/_layouts/table.twig
+++ b/resources/views/_layouts/table.twig
@@ -2,6 +2,8 @@
 {% set body_classes = 'container--wide' %}
 
 {% block content %}
+	{% block before %}{% endblock %}
+
 	<table class="table table-striped table-bordered table-hover table-condensed" tablesorter>
 		<thead>
 		<tr>
